[package]
name = "ssl"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/ssl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
csv = "1.2.0"
derive_builder = "0.12.0"
derive_more = "0.99"
float-cmp = "0.9.0"
fundsp = "0.12.0"
hound = "3.5.0"
itertools = "0.10.5"
nalgebra = "0.32.2"
# ndarray = "0.15.6"
ndarray.path = "../../../Development/Rust/ndarray/"
realfft = "3.2.0"
rustfft = "6.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.2.0"
smart-default = "0.6.0"
time = "0.3.19"
wav = "1.0.0"
