[package]
name = "ssloc"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/ssloc"

[features]
default = ["wav", "realtime", "bin"]
wav = ["dep:wav"]
realtime = ["alsa", "derive_more", "num", "serde_with"]
bin = ["anyhow", "clap", "confique", "unidirs", "realtime"]

[dependencies]
alsa = { version = "0.7.0", optional = true }
anyhow = { version = "1.0.71", optional = true }
clap = { version = "4.2.5", optional = true, features = ["derive"] }
confique = { version = "0.2.3", optional = true, default-features = false, features = ["toml"] }
derive_more = { version = "0.99.17", optional = true }
itertools = "0.10.5"
nalgebra = "0.32.2"
ndarray = "0.15.6"
num = { version = "0.4.0", optional = true }
realfft = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.3.3", optional = true }
smart-default = "0.7"
unidirs = { version = "0.1.1", optional = true }
wav = {version = "1", optional = true}

[dev-dependencies]
float-cmp = "0.9.0"
