[package]
name = "ssloc"
version = "0.3.0"
edition = "2021"
categories = ["multimedia::audio", "science"]
description = "sound source localisation"
keywords = ["ssl", "sst"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/ssloc"
documentation = "https://docs.rs/ssloc"

[lib]

[[bin]]
name = "ssloc"
required-features = ["bin"]

[features]
# default = ["bin"]
default = ["wav", "realtime", "image"]
wav = ["dep:hound"]
realtime = ["alsa", "derive_more"]
bin = [
    "anyhow",
    "clap",
    "confique",
    "unidirs",
    "realtime",
    "serde_with",
    "image",
    "wav",
]

[dependencies]
alsa = { version = "0.7.0", optional = true }
anyhow = { version = "1.0.71", optional = true }
clap = { version = "4.2.5", optional = true, features = ["derive"] }
confique = { version = "0.2.3", optional = true, default-features = false, features = [
    "toml",
] }
derive_more = { version = "0.99.17", optional = true }
image = { version = "0.24.6", optional = true, default-features = false, features = [
    "png",
] }
itertools = "0.10.5"
nalgebra = "0.32.2"
ndarray = "0.15.6"
num = "0.4.0"
realfft = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "3", optional = true }
smart-default = "0.7"
unidirs = { version = "0.1.1", optional = true }
hound = { version = "3.5", optional = true }
forr = "0.1.1"

[dev-dependencies]
float-cmp = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
